(install
 (section share_root)
 (files
  (Changelog.html as Changelog.html)
  (gui/reset.css as static/reset.css)
  (gui/style.css as static/style.css)
  (gui/vendor/focus-shift-1-0-0.js as static/vendor/focus-shift.js)
  (gui/client.js as static/client.js)))

; Disable missing-record-field-pattern warnings (partial matching),
; because they are kind of useless.
; See https://ocaml.org/manual/4.14/comp.html#ss:warn9 for details.
(env (dev (flags :standard -w -9)))
