(include_subdirs unqualified)

(executable
 (name server)
 (public_name playos-controller)
 (modules server info gui health
   info_page localization_page status_page error_page
   network_list_page network_details_page changelog_page
   licensing_page page definition icon)
 (libraries update lwt logs logs.fmt logs.lwt fpath cohttp-lwt-unix logging
  opium tyxml rauc zerotier connman locale network timedate systemd
  semver2 fieldslib screen_settings util ppx_protocol_conv_jsonm)
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_protocol_conv)))

(library
 (name update)
 (modules update)
 (libraries curl_proxy rauc_service lwt connman rauc curl semver2)
 (preprocess (pps lwt_ppx ppx_sexp_conv)))

(library
 (name curl_proxy)
 (modules curl_proxy)
 (libraries lwt connman curl)
 (preprocess (pps lwt_ppx ppx_sexp_conv)))

(library
 (name rauc_service)
 (modules rauc_service)
 (libraries lwt rauc)
 (preprocess (pps lwt_ppx ppx_sexp_conv)))

(library
 (name logging)
 (modules logging)
 (libraries lwt logs logs.fmt logs.lwt lwt.unix))

(library
 (name network)
 (modules network)
 (libraries lwt logs.lwt lwt.unix cohttp-lwt-unix connman systemd curl
            ppx_protocol_conv_jsonm)
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_protocol_conv)))

