(include_subdirs unqualified)

(executable
 (name server)
 (public_name playos-controller)
 (modules server update info gui health
   info_page localization_page status_page error_page
   network_list_page network_details_page changelog_page
   page definition icon)
 (libraries lwt logs logs.fmt logs.lwt fpath cohttp-lwt-unix logging
  opium tyxml rauc zerotier connman locale network timedate systemd
  semver2 fieldslib screen_settings)
 (preprocess (pps lwt_ppx ppx_sexp_conv)))

(library
 (name logging)
 (modules logging)
 (libraries lwt logs logs.fmt logs.lwt lwt.unix))

(library
 (name network)
 (modules network)
 (libraries lwt logs.lwt lwt.unix cohttp-lwt-unix connman systemd curl)
 (preprocess (pps lwt_ppx ppx_sexp_conv)))

