(library
 (name connman)
 (modules connman connman_interfaces)
 (libraries obus logs logs.lwt containers sexplib ezjsonm uri)
 (preprocess (pps lwt_ppx  ppx_sexp_conv)))

(rule
 (targets connman_interfaces.ml connman_interfaces.mli)
 (deps    connman_interfaces.xml)
 (action
  (run obus-gen-interface -keep-common -o connman_interfaces %{deps})))
