(include ../disable-unused-warnings.dune)

(library
 (name connman)
 (modules connman connman_interfaces)
 (libraries
  obus
  logs
  logs.lwt
  containers
  sexplib
  ezjsonm
  uri
  ppx_protocol_conv_jsonm)
 (preprocess
  (pps lwt_ppx ppx_sexp_conv ppx_protocol_conv)))

(rule
 (targets connman_interfaces.ml connman_interfaces.mli)
 (deps connman_interfaces.xml)
 (action
  (run obus-gen-interface -keep-common -o connman_interfaces %{deps})))
